fix(theme): adjust background color for code blocks in custom containers in dark mode

--- a/src/core/styles/vt-doc-code.css
+++ b/src/core/styles/vt-doc-code.css
@@ -38,6 +38,10 @@
   background-color: var(--vt-c-bg-soft);
 }
 
+.dark .vt-doc .custom-block div[class*='language-'] {
+  background-color: var(--vt-c-black);
+}
+
 @media (min-width: 640px) {
   .vt-doc div[class*='language-'] {
     margin: 28px 0;
